syntax = "proto3";

package assistant;
option go_package = "github.com/qtopie/homa/gen/assistant";

// Define the first streaming service
service CopilotService {
  rpc Chat(UserRequest) returns (stream StreamResponse);

  rpc AutoComplete(UserRequest) returns (AgentResponse);
}

message UserRequest {
  string sessionId = 1;
  int32 seq = 2;
  string message = 3;
  string prefix = 4;
  string suffix = 5;
}

message AgentResponse {
  string sessionId = 1;
  int32 seq = 2;
  string content = 3;
}

message StreamResponse {
  string sessionId = 1;
  int32 seq = 2;
  string content = 3;
}
